--- a/src/components/sections/CallToActionBanner.css
+++ b/src/components/sections/CallToActionBanner.css
@@ -11,7 +11,7 @@
 }
 
 .cta-banner-content {
-  background: linear-gradient(135deg, #4168FC 0%, #72C0FE 100%);
+  background: linear-gradient(135deg, #4168fc 0%, #72c0fe 100%);
   border-radius: 20px;
   padding: 7.2rem 3rem;
   display: flex;
@@ -40,7 +40,7 @@
 }
 
 .cta-primary {
-  background: #FB4444;
+  background: #fb4444;
   color: white;
   border: none;
   border-radius: 12px;
@@ -57,7 +57,7 @@
 .contact-cta-button {
   font-size: 16px;
   background: white;
-  color: #49484D;
+  color: #49484d;
   border: none;
   border-radius: 12px;
   padding: 12px 20px;
@@ -65,7 +65,6 @@
   cursor: pointer;
   transition: all 0.3s ease;
 }
-
 
 /* Right Side - Person Image */
 .cta-image-content {
@@ -95,7 +94,7 @@
     padding: 0 2rem;
   }
   .cta-banner-content {
-    background: linear-gradient(135deg, #4168FC 0%, #72C0FE 100%);
+    background: linear-gradient(135deg, #4168fc 0%, #72c0fe 100%);
     border-radius: 20px;
     padding: 6rem 3rem 6rem 3rem;
     display: flex;
@@ -116,19 +115,17 @@
     align-items: flex-end;
     justify-content: flex-end;
   }
-  .cta-person-image{
+  .cta-person-image {
     width: 100%;
     height: 100%;
   }
   .banner-cta-title {
     font-size: 36px;
   }
-  
-  
 }
 @media (max-width: 818px) {
   .cta-banner-content {
-    background: linear-gradient(135deg, #4168FC 0%, #72C0FE 100%);
+    background: linear-gradient(135deg, #4168fc 0%, #72c0fe 100%);
     border-radius: 20px;
     padding: 6rem 3rem 6rem 3rem;
     display: flex;
@@ -149,11 +146,10 @@
     align-items: flex-end;
     justify-content: flex-end;
   }
-
 }
 @media (max-width: 809px) {
   .cta-banner-content {
-    background: linear-gradient(135deg, #4168FC 0%, #72C0FE 100%);
+    background: linear-gradient(135deg, #4168fc 0%, #72c0fe 100%);
     border-radius: 20px;
     padding: 5rem 3rem 5rem 3rem;
     display: flex;
@@ -174,7 +170,6 @@
     align-items: flex-end;
     justify-content: flex-end;
   }
-
 }
 
 @media (max-width: 768px) {
@@ -200,17 +195,16 @@
     align-items: flex-end;
     justify-content: flex-end;
   }
-  
+
   .cta-banner-container {
     padding: 0 0rem;
   }
-  
+
   .cta-banner-content {
     padding: 2rem 1.5rem;
     height: 600px;
-    
   }
-  
+
   .banner-cta-title {
     font-size: 28px;
     margin-bottom: 1.5rem;
@@ -220,16 +214,16 @@
     text-align: center;
     display: flex;
   }
-  
+
   .banner-cta-title br {
     display: none;
   }
-  
+
   .cta-person-image {
     width: 391px;
     height: 391px;
   }
-  
+
   .contact-cta-button {
     padding: 0.875rem 1.75rem;
     font-size: 0.95rem;
@@ -252,7 +246,7 @@
   .cta-image-content {
     right: 5%;
   }
-  
+
   .cta-person-image {
     width: 340px;
     height: 340px;
@@ -263,11 +257,9 @@
   .cta-image-content {
     right: 0%;
   }
-  
+
   .cta-person-image {
     width: 340px;
     height: 340px;
   }
 }
-
- 
