--- a/src/components/sections/CommercialPropaneSolutions.css
+++ b/src/components/sections/CommercialPropaneSolutions.css
@@ -4,9 +4,9 @@
 }
 
 .commercial-propane-solutions-container {
-    max-width: 90%;
-    margin: 0 auto;
-    padding: 0 1rem;
+  max-width: 90%;
+  margin: 0 auto;
+  padding: 0 1rem;
 }
 
 .commercial-propane-solutions-content {
@@ -21,7 +21,7 @@
 
 .commercial-propane-solutions-title {
   font-size: 36px;
-  background: linear-gradient(90deg, #4168FC 0%, #72C0FE 100%);
+  background: linear-gradient(90deg, #4168fc 0%, #72c0fe 100%);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
@@ -39,7 +39,7 @@
 .commercial-propane-solutions-description {
   font-size: 20px;
   font-weight: 400;
-  color: #49484D;
+  color: #49484d;
   line-height: 100%;
   margin: 0 0 2rem 0;
   font-family: var(--font-gilroy);
@@ -59,24 +59,24 @@
   cursor: pointer;
   transition: all 0.3s ease;
   text-transform: capitalize;
-  background: linear-gradient(90deg, #4067FC 0%, #60B8FF 100%);
+  background: linear-gradient(90deg, #4067fc 0%, #60b8ff 100%);
   color: #ffffff;
   font-family: var(--font-gilroy);
   font-weight: 600;
 }
 
 .commercial-propane-learn-more-button {
-    padding: 2% 2.5%;
-    border: none;
-    border-radius: 8px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    text-transform: capitalize;
-    background: #eef2f6;
-    color:#262525;
-    font-family: var(--font-gilroy);
-    font-weight: 600;
+  padding: 2% 2.5%;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  text-transform: capitalize;
+  background: #eef2f6;
+  color: #262525;
+  font-family: var(--font-gilroy);
+  font-weight: 600;
 }
 
 .commercial-propane-solutions-button.primary {
@@ -110,7 +110,7 @@
   .commercial-propane-solutions-content {
     gap: 3rem;
   }
-  
+
   .commercial-propane-solutions-title {
     font-size: 32px;
   }
@@ -120,32 +120,32 @@
   .commercial-propane-solutions-section {
     padding: 3rem 0;
   }
-  
+
   .commercial-propane-solutions-container {
     padding: 0 0.75rem;
   }
-  
+
   .commercial-propane-solutions-content {
     flex-direction: column;
     gap: 1rem;
     text-align: left;
   }
-  
+
   .commercial-propane-solutions-title {
     font-size: 28px;
     width: 100% !important;
     font-family: var(--font-gilroy);
     font-weight: 600;
   }
-  
+
   .commercial-propane-solutions-description {
     font-size: 16px;
     font-family: var(--font-gilroy);
-    color: #49484D;
+    color: #49484d;
   }
-  
+
   .commercial-propane-solutions-buttons {
-   flex-direction: column;
+    flex-direction: column;
   }
   .commercial-propane-solutions-button {
     width: 100%;
@@ -154,4 +154,3 @@
     width: 100%;
   }
 }
-
